--- a/quizz.html
+++ b/quizz.html
@@ -11,16 +11,16 @@
             <br>
             <nav class="navbar">
                 <ul>
-                    <li><a href="proj.html">Homepage</a></li>
-                    <li><a href="     ">Academic Background</a></li>
+                    <li><a href="index.html">Homepage</a></li>
+                    <li><a href="ac.html">Academic Background</a></li>
                      <li><a href="skills.html">Skills</a></li>
                     <li><a href="inter.html">Intership/Work Experience</a></li>
-                    <li><a href="    ">Scientific Events</a></li>
+                    <li><a href="event.html">Scientific Events</a></li>
                     <li><a href="subj.html">Studied Subjects</a></li>
-                    <li><a href="   ">Passions and Hobbies</a></li>
+                    <li><a href="hobby.html">Passions and Hobbies</a></li>
                     <li><a href="quizz.html">Quiz</a></li>
-                    <li><a href="  ">Contact</a></li>
-                    <li><a href="  ">Testimonials</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
             </nav>
         </header>
