--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
             <br>
             <nav class="navbar">
                 <ul>
-                    <li><a href="proj.html">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="pages\ac.html">Academic Background</a></li>
                      <li><a href="skills.html">Skills</a></li>
                     <li><a href="inter.html">Intership/Work Experience</a></li>
@@ -23,7 +23,7 @@
                     <li><a href="hobby.html">Passions and Hobbies</a></li>
                     <li><a href="quizz.html">Quiz</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="  ">Testimonials</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
             </nav>
         </header>
