--- a/testimonials.html
+++ b/testimonials.html
@@ -14,7 +14,7 @@
             <br>
             <nav class="navbar">
                 <ul>
-                    <li><a href="proj.html">Homepage</a></li>
+                    <li><a href="index.html">Homepage</a></li>
                     <li><a href="ac.html">Academic Background</a></li>
                      <li><a href="skills.html">Skills</a></li>
                     <li><a href="inter.html">Intership/Work Experience</a></li>
