--- a/contact.html
+++ b/contact.html
@@ -31,17 +31,16 @@
         <section class="borders">
           <h class="p2">
             <br>
-            
-    <table style="width: 100%">
-    <tr>
-      <th>Email:</th>
-      <td>emezghani5@gmail.com</td>
-    </tr>
-    <tr>
-      <th>Telephone:</th>
-      <td>26153833</td>
-    </tr>
-  </table>
+            <form style="width: 100%">
+              <div>
+                  <label for="email">Email:</label>
+                  <input type="email" id="email" name="email" value="emezghani5@gmail.com" readonly>
+              </div>
+              <div>
+                  <label for="telephone">Telephone:</label>
+                  <input type="tel" id="telephone" name="telephone" value="26153833" readonly>
+              </div>
+          </form>
           </h>
         </section>
     </body>
