--- a/testimonials.html
+++ b/testimonials.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css\style.css">
         <script language="javascript" src="javascript\aa.js"></script>
-        <title>event</title>
+        <title>Testimonials</title>
     </head>
     <body>
         <header>
             <br>
-            <h1>event</h1>
+            <h1>Testimonials</h1>
             <br>
             <nav class="navbar">
                 <ul>
