--- a/inter.html
+++ b/inter.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css\style.css">
         <script language="javascript" src="javascript\aa.js"></script>
-        <title>Homepage</title>
+        <title>intership</title>
     </head>
     <body>
         <header>
