--- a/skills.html
+++ b/skills.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css\style.css">
         <script language="javascript" src="javascript\aa.js"></script>
-        <title>Homepage</title>
+        <title>skills</title>
     </head>
     <body>
         <header>
             <br>
-            <h1>Creation of a Personal Website</h1>
+            <h1>Skills</h1>
             <br>
             <nav class="navbar">
                 <ul>
